infra/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: posts 
spec:
  containers:
    - name: posts
      image: kkunle/posts:latest
      imagePullPolicy: Never
